@@ -83,6 +83,7 @@ public class JavaRunner {
         shellErr = new PrintStream(delegatingOut, true, StandardCharsets.UTF_8);
         var builder = JShell.builder().out(shellOut).err(shellErr)
                 .remoteVMOptions("--class-path", System.getProperty("java.class.path"))
+                .remoteVMOptions("--enable-native-access=ALL-UNNAMED")
                 .remoteVMOptions("-Dsmile.home=" + System.getProperty("smile.home", "."));
 
         if (SystemInfo.isWindows) {
